fix: 공지글 삭제 API 메소드 patch -> delte로 수정
